fix scroll behavior for vertical overflow

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -166,7 +166,7 @@ $hero-body-padding: 4rem 1.5rem
 
   .is-main
     flex: 1
-    overflow-x: hidden
+    overflow: hidden
 
 =logo($desk, $tab, $touch)
   +desktop
